# RobcogenCppAd

./: README.md  test.py
pybind_robots/: Acrobot.kindsl  CMakeLists.txt  example.kindsl  framework.properties  log4j.properties  notes.txt  robcogen.sh  setup.py
pybind_robots/gen_code/SL/acrobot/: CMakeLists.txt
pybind_robots/gen_code/SL/acrobotUser/: CMakeLists.txt
pybind_robots/gen_code/cpp/acrobot/: CMakeLists.txt  declarations.h  default_dynparams_getter.h  dynamics_parameters.h  forward_dynamics.h  forward_dynamics.impl.h  inertia_properties.h  inertia_properties.impl.h  inverse_dynamics.h  inverse_dynamics.impl.h  jacobians.h  jacobians.impl.h  jsim.h  jsim.impl.h  kinematics_parameters.h  traits.h  (+5 more)
pybind_robots/gen_code/maxima/: Acrobot_transforms  Acrobot_transforms6D  Acrobot_transforms6DForce
pybind_robots/gen_code/misc/: Acrobot.ctdsl
pybind_robots/gen_code/models/: Acrobot.m  Acrobot.sd  Acrobot.urdf
pybind_robots/gen_code_num_diff_test/maxima/: Fancy_transforms  Fancy_transforms6D  Fancy_transforms6DForce
pybind_robots/gen_code_num_diff_test/misc/: Fancy.ctdsl
pybind_robots/gen_code_num_diff_test/models/: Fancy.m  Fancy.urdf
pybind_robots/gen_code_old/maxima/: Fancy_transforms  Fancy_transforms6D  Fancy_transforms6DForce
pybind_robots/gen_code_old/misc/: Fancy.ctdsl
pybind_robots/gen_code_old/models/: Fancy.m  Fancy.sd  Fancy.urdf
pybind_robots/src/: acrobot_test.cpp  acrobot_wrapper.h  eigen_util.h  generate_files.py  robot_wrapper.h
pybind_robots/src_backup/: acrobot_test.cpp  forward_euler.h  generate_files.py  robot_wrapper.h
(+98 files in other folders)
